force-app/main/default/objects/Agent__c/Agent__c.object-meta.xml
<CustomObject>
    <description>Agent profile for Loop 2 routing</description>
    <label>Agent</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>