force-app/main/default/objects/Agent__c/fields/Commission_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tier__c</fullName>
    <label>Commission Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Tier 1</fullName><default>false</default></value>
            <value><fullName>Tier 2</fullName><default>false</default></value>
            <value><fullName>Tier 3</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>