force-app/main/default/objects/Agent__c/fields/Conversion_Rate_High_Value_Home__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate_High_Value_Home__c</fullName>
    <label>Conversion Rate High Value Home</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>