force-app/main/default/objects/Agent__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>