force-app/main/default/objects/Agent__c/fields/Licensed_States__c.field-meta.xml
<CustomField>
    <fullName>Licensed_States__c</fullName>
    <label>Licensed States</label>
    <type>Text</type>
    <length>255</length>
</CustomField>