force-app/main/default/objects/Agent__c/fields/Lines_Appointed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Appointed__c</fullName>
    <label>Lines Appointed</label>
    <type>Text</type>
    <length>255</length>
</CustomField>