force-app/main/default/objects/Agent__c/fields/Lines_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Licensed__c</fullName>
    <label>Lines Licensed</label>
    <type>Text</type>
    <length>255</length>
</CustomField>