force-app/main/default/objects/Agent__c/fields/Max_Lead_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Capacity__c</fullName>
    <label>Max Lead Capacity</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>