force-app/main/default/objects/Agent__c/fields/POR_Since__c.field-meta.xml
<CustomField>
    <fullName>POR_Since__c</fullName>
    <label>POR Since</label>
    <type>Date</type>
</CustomField>