force-app/main/default/objects/Agent__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Text</type>
    <length>255</length>
</CustomField>