force-app/main/default/objects/Agent__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agents</relationshipLabel>
    <relationshipName>Agents</relationshipName>
</CustomField>